--- a/src/index.template.html
+++ b/src/index.template.html
@@ -15,9 +15,44 @@
       })(window, document, 'script', 'dataLayer', 'GTM-KZRJW6K');
     </script>
     <!-- End Google Tag Manager -->
-    <title>TikTok Downloader</title>
+    <title>TikTok Downloader | Free TikTok Video Downloader</title>
     <meta charset="utf-8" />
-    <meta name="description" content="<%= productDescription %>" />
+    <meta
+      name="description"
+      content="dontiktok 100% free and fast way to download TikTok videos. the best tiktok downloader for pc, androiad and iOS."
+    />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "How to download TikTok videos?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Dontiktok.com is one of the best download tools from TikTok, to use this downloader, you don’t need to install software on your mobile phone,..."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How download TikTok video without watermark?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Dontiktok.com download TikTok videos very fast and easy with no watermark and HD quality."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "How to download TikTok videos on Android smartphones?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "With dontiktok.com you can download TikTok videos on Android phones."
+            }
+          }
+        ]
+      }
+    </script>
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta
